# Isosurface_Based_Segmentation

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE
Combine_Meshes/: CMakeLists.txt  Combine_Meshes.cpp
Heirarchical_Clustering/: CMakeLists.txt  main.cpp
Heirarchical_Clustering/include/: Similarity.h
Heirarchical_Clustering/src/: Similarity.cpp
Isosurface_Extraction/: CMakeLists.txt  main.cpp
Isosurface_Extraction/include/IO/: ReadTIFF.h  ReadVTI.h  WriteCSV.h  WriteOBJ.h  WritePLY.h  WriteVTK.h
Isosurface_Extraction/include/IsosurfaceExtraction/: FlyingEdges3D.h
Isosurface_Extraction/include/Processing/: CummulativeLaplacianHistogram.h
Isosurface_Extraction/src/IO/: ReadTIFF.cpp  ReadVTI.cpp  WriteCSV.cpp  WriteOBJ.cpp  WritePLY.cpp  WriteVTK.cpp
Isosurface_Extraction/src/IsosurfaceExtraction/: FlyingEdges3D.cpp
Isosurface_Extraction/src/Processing/: CummulativeLaplacianHistogram.cpp
Mesh_Processing/: CMakeLists.txt  Mesh_Processing.cpp  main.cpp  test.cpp
Py_Mesh_Extraction/: main.py  run.bat
Py_Pipeline/: 19.off  42.off  59.off  global_aggregate.py  mask19.vti  mask42.vti  mask59.vti  pipeline.bat  pipeline.py  pipeline.txt  pipeline_gpu.py  requirements.txt  test.py
Py_Similarity/: requirements.txt
Scripts/: copyExecsToRelease.bat  copyIsoMPExecToIE.bat  copyPyExecsToHC.bat  pipeline.bat
Scripts/Release/lib/pymeshlab/: E57Format.lib  IFXCore.lib  IFXExporting.lib  IFXScheduling.lib  external-lib3ds.lib  meshlab-common-gui.lib  pmeshlab.cp39-win_amd64.pyd
py/: 25.off  mesh_iou.py  requirements.txt  setup_similarity.py  similarity.py
